add title and link

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
+    <title>旅游富淡 Fudan Tarvel</title>
     <body>
-        <h1>Hello World</h1>
-        <p>I'm hosted with Github Pages.</p>
+        <a href="http://www.fudan.edu.cn">复旦大学</a>
     </body>
 </html>
