--- a/index.html
+++ b/index.html
@@ -10,37 +10,16 @@
 </head>
 
 <body>
-    <header>
-        <div class="header_top"></div>
-        <nav>
-            <ul id="nav">
-                <li><a href="#" target="_blank">首页</a></li>
-                <li><a href="#" target="_blank">浏览页</a></li>
-                <li><a href="#" target="_blank">搜索页</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <figure>
-            <img src="img/travel-images/normal/medium/9505897492.jpg"><br>
-            <figcaption>A Tarvel Picture</figcaption>
-        </figure>
-        <div id="LatestComment">
-            <p>By john<time>2020-2-29</time></p>
-            <p>I love FDU</p>
-        </div>
-        <hr />
-        <div>
-            <p>By Ari<time>2018-12-11</time></p>
-            <p>Thank u, next</p>
-        </div>
-    </main>
+    <header></header>
     <footer>
-        <a href="http://www.fudan.edu.cn" target="_blank">Fudan University </a>
-        <a href="http://www.apple.com.cn" target="_blank">Apple </a>
-        <a href="#">Fudan Software School</a>
-        <a href="mailto:qsliu19@fudan.edu.cn">Contact ME </a>
-        <div>Copyright &copy; 2020</div>
+        <br>
+        <div id="bottom-link">
+            <a href="http://www.fudan.edu.cn/">Fudan University</a>|
+            <a href="mailto:imjliu@outlook.com">Contact ME</a>
+        </div>
+        <div id="bottom-info">
+            This website is a lesson project
+        </div>
     </footer>
 </body>
 
