--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 
 <body>
     <header></header>
+    <nav>
+        <form method="POST" action="#">
+            <input type="text" name="title" required autofocus>
+            <input type="submit" value="Search">
+        </form>
+    </nav>
     <footer>
         <br>
         <div id="bottom-link">
