commit signin and signup

--- a/src/other/signin.html
+++ b/src/other/signin.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
 
-<head></head>
+<head>
+    <title>Sign in</title>
+</head>
 
 <body>
+    <h1>Sign in</h1>
     <div id="signin-box">
-        <form method="POST">
+        <form method="POST" action="/src/public/home.html">
             <p>
                 <label for="user-name">Username</label>
                 <input type="text" name="user-name">
