--- a/index.html
+++ b/index.html
@@ -2,31 +2,10 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <title>旅游富淡 Fudan Tarvel</title>
-    <!--Fort Awesome (https://fortawesome.com)-->
-    <link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
-    <header></header>
-    <nav>
-        <form method="POST" action="#">
-            <input type="text" name="title" required autofocus>
-            <input type="submit" value="Search">
-        </form>
-    </nav>
-    <footer>
-        <br>
-        <div id="bottom-link">
-            <a href="http://www.fudan.edu.cn/">Fudan University</a>|
-            <a href="mailto:imjliu@outlook.com">Contact ME</a>
-        </div>
-        <div id="bottom-info">
-            This website is a lesson project
-        </div>
-    </footer>
+    <a href="/src/public/home.html">TEST</a>
 </body>
 
 </html>
