reset relative path

--- a/src/public/home.html
+++ b/src/public/home.html
@@ -4,24 +4,24 @@
 <head>
     <title>Travel Fudan</title>
     <style>
-        @import url(/css/reset.css);
-        @import url(/css/nav.css);
+        @import url(../../css/reset.css);
+        @import url(../../css/nav.css);
     </style>
 </head>
 
 <body>
     <nav>
         <ul>
-            <li class="item left current"><a href="src/public/home.html">Home</a></li>
-            <li class="item left"><a href="src/public/explore.html">Explore</a></li>
-            <li class="item left"><a href="src/public/search.html">Search</a></li>
+            <li class="item left current"><a href="../public/home.html">Home</a></li>
+            <li class="item left"><a href="../public/explore.html">Explore</a></li>
+            <li class="item left"><a href="../public/search.html">Search</a></li>
             <li class="item right dropdown">
                 <summary>My account</summary>
                 <ul id="account-dropdown-content" class="dropdown-content">
-                    <li><a href="src/private/upload.html">Upload</a></li>
-                    <li><a href="src/private/mypicture.html">My Picture</a></li>
-                    <li><a href="src/private/myfavorites.html">My Favorites</a></li>
-                    <li><a href="src/other/signin.html">Sign in</a></li>
+                    <li><a href="../private/upload.html">Upload</a></li>
+                    <li><a href="../private/mypicture.html">My Picture</a></li>
+                    <li><a href="../private/myfavorites.html">My Favorites</a></li>
+                    <li><a href="../other/signin.html">Sign in</a></li>
                 </ul>
             </li>
         </ul>
