finish home-section

--- a/src/public/home.html
+++ b/src/public/home.html
@@ -2,9 +2,12 @@
 <html>
 
 <head>
-    <title>Travel Fudan</title>
+    <title>Hello, World!</title>
     <link rel="stylesheet" href="../../css/reset.css">
+    <link rel="stylesheet" href="../../css/font.css">
     <link rel="stylesheet" href="../../css/header.css">
+    <link rel="stylesheet" href="../../css/home-main.css">
+    <link rel="stylesheet" href="../../css/home-section.css">
 </head>
 
 <body>
@@ -28,6 +31,247 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <h1>Hello,World!</h1>
+        <img src="../../img/travel-images/normal/medium/9504448540.jpg" width="100%">
+    </main>
+    <section>
+        <div class="photo-item">
+            <a href="../other/detail.html">
+                <div class="photo-box">
+                    <img class="photo" src="../../img/travel-images/normal/medium/5855191275.jpg">
+                </div>
+                <div class="text-box">
+                    <div class="title">Lorem ipsum</div>
+                    <div class="text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore
+                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+                        ut
+                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                        culpa qui officia deserunt mollit anim id est laborum.
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="photo-item">
+            <a href="../other/detail.html">
+                <div class="photo-box">
+                    <img class="photo" src="../../img/travel-images/normal/medium/5855221959.jpg">
+                </div>
+                <div class="text-box">
+                    <div class="title">Lorem ipsum</div>
+                    <div class="text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore
+                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+                        ut
+                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                        culpa qui officia deserunt mollit anim id est laborum.
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="photo-item">
+            <a href="../other/detail.html">
+                <div class="photo-box">
+                    <img class="photo" src="../../img/travel-images/normal/medium/5855774224.jpg">
+                </div>
+                <div class="text-box">
+                    <div class="title">Lorem ipsum</div>
+                    <div class="text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore
+                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+                        ut
+                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                        culpa qui officia deserunt mollit anim id est laborum.
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="photo-item">
+            <a href="../other/detail.html">
+                <div class="photo-box">
+                    <img class="photo" src="../../img/travel-images/normal/medium/5857298322.jpg">
+                </div>
+                <div class="text-box">
+                    <div class="title">Lorem ipsum</div>
+                    <div class="text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore
+                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+                        ut
+                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                        culpa qui officia deserunt mollit anim id est laborum.
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="photo-item">
+            <a href="../other/detail.html">
+                <div class="photo-box">
+                    <img class="photo" src="../../img/travel-images/normal/medium/6114867983.jpg">
+                </div>
+                <div class="text-box">
+                    <div class="title">Lorem ipsum</div>
+                    <div class="text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore
+                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+                        ut
+                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                        culpa qui officia deserunt mollit anim id est laborum.
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="photo-item">
+            <a href="../other/detail.html">
+                <div class="photo-box">
+                    <img class="photo" src="../../img/travel-images/normal/medium/9504451722.jpg">
+                </div>
+                <div class="text-box">
+                    <div class="title">Lorem ipsum</div>
+                    <div class="text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore
+                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+                        ut
+                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                        culpa qui officia deserunt mollit anim id est laborum.
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="photo-item">
+            <a href="../other/detail.html">
+                <div class="photo-box">
+                    <img class="photo" src="../../img/travel-images/normal/medium/9498386718.jpg">
+                </div>
+                <div class="text-box">
+                    <div class="title">Lorem ipsum</div>
+                    <div class="text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore
+                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+                        ut
+                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                        culpa qui officia deserunt mollit anim id est laborum.
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="photo-item">
+            <a href="../other/detail.html">
+                <div class="photo-box">
+                    <img class="photo" src="../../img/travel-images/normal/medium/6592317633.jpg">
+                </div>
+                <div class="text-box">
+                    <div class="title">Lorem ipsum</div>
+                    <div class="text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore
+                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+                        ut
+                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                        culpa qui officia deserunt mollit anim id est laborum.
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="photo-item">
+            <a href="../other/detail.html">
+                <div class="photo-box">
+                    <img class="photo" src="../../img/travel-images/normal/medium/8152043422.jpg">
+                </div>
+                <div class="text-box">
+                    <div class="title">Lorem ipsum</div>
+                    <div class="text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore
+                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+                        ut
+                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                        culpa qui officia deserunt mollit anim id est laborum.
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="photo-item">
+            <a href="../other/detail.html">
+                <div class="photo-box">
+                    <img class="photo" src="../../img/travel-images/normal/medium/8645912379.jpg">
+                </div>
+                <div class="text-box">
+                    <div class="title">Lorem ipsum</div>
+                    <div class="text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore
+                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+                        ut
+                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                        culpa qui officia deserunt mollit anim id est laborum.
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="photo-item">
+            <a href="../other/detail.html">
+                <div class="photo-box">
+                    <img class="photo" src="../../img/travel-images/normal/medium/8711645510.jpg">
+                </div>
+                <div class="text-box">
+                    <div class="title">Lorem ipsum</div>
+                    <div class="text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore
+                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+                        ut
+                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                        culpa qui officia deserunt mollit anim id est laborum.
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="photo-item">
+            <a href="../other/detail.html">
+                <div class="photo-box">
+                    <img class="photo" src="../../img/travel-images/normal/medium/8646991554.jpg">
+                </div>
+                <div class="text-box">
+                    <div class="title">Lorem ipsum</div>
+                    <div class="text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore
+                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+                        ut
+                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                        culpa qui officia deserunt mollit anim id est laborum.
+                    </div>
+                </div>
+            </a>
+        </div>
+    </section>
+    <aside>
+        <button onclick="alert">alert</button>
+        <button onclick="top">top</button>
+    </aside>
+    <footer>
+
+    </footer>
 </body>
 
 </html>
